Introduce ElasticsearchRequestOptions to allow for per-request parameters and headers in Elasticsearch operations